# spotify-to-tidal

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
common/: auth_server.py  config_manager.py  network_manager.py  storage.py
spotify/: authenticator.py  fetcher.py  models.py
